# job-analyzer

./: Makefile  README.md  pyproject.toml
job_analyzer/: analyzer.py  job_analyzer_app.py
